// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when array prop "items" is an empty array: "[]" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={false}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  onClick={[MockFunction]}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "fullWidth" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={false}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "hasIconOnly" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={false}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.div
    hasIcon={true}
  >
    jest-auto-snapshots String Fixture
  </styled.div>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSelect" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={false}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when boolean prop "loading" is set to: "false" 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed all props 1`] = `
<styled.button
  data-tip="jest-auto-snapshots String Fixture"
  disabled={true}
  fullWidth={true}
  hasIconOnly={true}
  icon={<NodeFixture />}
  innerRef={<NodeFixture />}
  isSplit={true}
  size="small"
  type="link"
>
  <NodeFixture />
  <styled.span>
    jest-auto-snapshots String Fixture
  </styled.span>
  <styled.img
    alt="loading"
    src="./images/loading-gray.svg"
  />
</styled.button>
`;

exports[`jest-auto-snapshots > Button Matches snapshot when passed only required props 1`] = `
<styled.button
  disabled={false}
  fullWidth={false}
  hasIconOnly={false}
  onClick={[MockFunction]}
  size="medium"
  type="secondary"
>
  <styled.div
    hasIcon={false}
  />
</styled.button>
`;
